agri-stromae/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agri-stromae-ui-svc
spec:
  selector:
    app: agri-stromae-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
